fix embed width on mobile

--- a/src/App-Custom.css
+++ b/src/App-Custom.css
@@ -199,6 +199,12 @@ p {
   /* text-overflow: ellipsis; */
 }
 
+@media screen and (max-width: 1024px) {
+  .related-card .embed iframe {
+    width: 300px;
+  }
+}
+
 .related-link-icon {
   padding-right: 5px;
 }
